--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <h5 class="text-white mb-4">Get In Touch</h5>
                     <p><i class="fa fa-map-marker-alt me-3"></i>Door No 1-60/8/A&B, 3rd floor, KNR Square, Opp.The platina, Gachibowli, Hyderabad -500032</p>
                     <p><i class="fa fa-phone-alt me-3"></i>+91 8520944280</p>
-                    <p><i class="fa fa-envelope me-3"></i>hr@mviabletechnologies.cfom</p>
+                    <p><i class="fa fa-envelope me-3"></i>hr@mviabletechnologies.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -747,6 +747,7 @@
 </body>
 
 </html>
+
 
 
 
